[gd_scene load_steps=14 format=3 uid="uid://cfwx3dn2y3sd5"]

[ext_resource type="Script" uid="uid://bx28dexehrpv1" path="res://assets/main_screen.gd" id="1_osmlc"]
[ext_resource type="PackedScene" uid="uid://dgb8ja65cugsu" path="res://assets/scenes/tab_summary.tscn" id="2_4h45y"]
[ext_resource type="FontFile" uid="uid://mtx47crftaw1" path="res://assets/fonts/fira-sans/FiraSans-Italic.ttf" id="2_xkehw"]
[ext_resource type="PackedScene" uid="uid://djt37t72t3rua" path="res://assets/scenes/tab_summary_list_separator.tscn" id="3_xkehw"]
[ext_resource type="StyleBox" uid="uid://bl8q0bl6p5l3o" path="res://assets/form_panel_stylebox.tres" id="4_2nm68"]
[ext_resource type="Script" uid="uid://2ddof6kkhsx0" path="res://assets/add_tab_view.gd" id="5_wwhf1"]
[ext_resource type="PackedScene" uid="uid://cxixikfpw4g6e" path="res://assets/scenes/person_field.tscn" id="6_lict1"]
[ext_resource type="Texture2D" uid="uid://bwl7na5h8hmu6" path="res://assets/images/plus_icon.png" id="7_jfd6n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06ig3"]
draw_center = false
border_width_bottom = 4
border_color = Color(0.286275, 0.345098, 0.403922, 1)

[sub_resource type="Animation" id="Animation_tkxyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AddTabView:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1920)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fphxj"]
resource_name = "hide_add_tab_view"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AddTabView:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 640), Vector2(0, 1920)]
}

[sub_resource type="Animation" id="Animation_qdlv5"]
resource_name = "show_add_tab_view"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AddTabView:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 1920), Vector2(0, 640)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkxyu"]
_data = {
&"RESET": SubResource("Animation_tkxyu"),
&"hide_add_tab_view": SubResource("Animation_fphxj"),
&"show_add_tab_view": SubResource("Animation_qdlv5")
}

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_osmlc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.992157, 1, 0.968627, 1)

[node name="TabListView" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TabListView"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="TabListView/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.223529, 0.25098, 1)
theme_override_fonts/font = ExtResource("2_xkehw")
theme_override_font_sizes/font_size = 112
text = "Split The Difference"

[node name="MarginContainer" type="MarginContainer" parent="TabListView/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64

[node name="TabSummaryList" type="VBoxContainer" parent="TabListView/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="OpenTabs" type="Label" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.223529, 0.25098, 1)
theme_override_font_sizes/font_size = 96
text = "Open Tabs"

[node name="TabSummary" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList" instance=ExtResource("2_4h45y")]
layout_mode = 2

[node name="TabSummaryListSeparator" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList" instance=ExtResource("3_xkehw")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="TabName" type="Label" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Coffee"

[node name="NextToPay" type="Label" parent="TabListView/VBoxContainer/MarginContainer/TabSummaryList/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Daniel"

[node name="AddTab" type="Button" parent="TabListView"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.537255, 0.760784, 0.533333, 1)
theme_override_colors/font_color = Color(0.356863, 0.54902, 0.352941, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Add Tab"
flat = true

[node name="ScreenFade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.301961)

[node name="AddTabView" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1920.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_2nm68")
script = ExtResource("5_wwhf1")

[node name="MarginContainer" type="MarginContainer" parent="AddTabView"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="AddTabView/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="MarginContainer" type="MarginContainer" parent="AddTabView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 256

[node name="TabName" type="LineEdit" parent="AddTabView/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.595154, 0.595154, 0.595154, 1)
theme_override_colors/font_color = Color(0.203922, 0.223529, 0.25098, 1)
theme_override_font_sizes/font_size = 76
theme_override_styles/focus = SubResource("StyleBoxFlat_06ig3")
theme_override_styles/normal = SubResource("StyleBoxFlat_06ig3")
placeholder_text = "New Tab"
max_length = 64

[node name="MarginContainer2" type="MarginContainer" parent="AddTabView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 128

[node name="PersonFieldList" type="VBoxContainer" parent="AddTabView/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="PersonField" parent="AddTabView/MarginContainer/VBoxContainer/MarginContainer2/PersonFieldList" instance=ExtResource("6_lict1")]
layout_mode = 2

[node name="PersonField2" parent="AddTabView/MarginContainer/VBoxContainer/MarginContainer2/PersonFieldList" instance=ExtResource("6_lict1")]
layout_mode = 2

[node name="AddPersonField" type="Button" parent="AddTabView/MarginContainer/VBoxContainer/MarginContainer2/PersonFieldList"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
icon = ExtResource("7_jfd6n")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="AddTabView/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Discard" type="Button" parent="AddTabView/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 0.560784, 0.529412, 1)
theme_override_colors/font_color = Color(0.996078, 0.372549, 0.333333, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Cancel"
flat = true

[node name="Submit" type="Button" parent="AddTabView/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.537255, 0.760784, 0.533333, 1)
theme_override_colors/font_color = Color(0.356863, 0.54902, 0.352941, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Submit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tkxyu")
}
